[package]
name = "yba_sounds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

wasapi = "0.12.0"
rodio = "0.16.0"
winapi =  { version = "0.3.9", features = ["audiosessiontypes","endpointvolume", "audioclient", "coml2api", "combaseapi", "debug", "devpkey", "handleapi", "ksmedia", "mmdeviceapi", "objbase", "std", "synchapi", "winbase", "winuser","mmeapi"] }
embedded-hal = "0.2.7"